# algorithms_and_data_structure

./: Gemfile  README.md  docker-compose.yml  memo.txt  package-lock.json  package.json
app/assets/config/: manifest.js
app/controllers/: microposts_controller.rb  pages_controller.rb  sessions_controller.rb  users_controller.rb
app/helpers/: sessions_helper.rb
app/models/: micropost.rb  user.rb
app/views/layouts/: application.html.erb
app/views/microposts/: _form.html.erb  _micropost.html.erb  index.html.erb  show.html.erb
clang/: .gitignore  Dockerfile  Makefile  main.c  node.h
clang/src/: Makefile  avl-tree.c  avl-tree.h  binary-tree.c  binary-tree.h  doubly-linked-list.c  doubly-linked-list.h  item.h  main.c  queue.c  queue.h  singly-linked-list.c  singly-linked-list.h  stack.c  stack.h
clang/tests/: CMakeLists.txt  binary-tree-test.cc  doubly-linked-list-test.cc  node_test.cc  queue-test.cc  singly-linked-list-test.cc  stack-test.cc
config/: application.rb  credentials.yml.enc  routes.rb
config/environments/: production.rb
config/initializers/: assets.rb
db/: schema.rb
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
leetcode/: .gitignore
leetcode/141. Linked List Cycle/: answer.c  answer.py  memo.md
leetcode/142. Linked List Cycle2/: answer.c
python/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
python/scripts/: init.sh
python/src/: singly_linked_list.py  test_singly_linked_list.py
server/: Dockerfile  Gemfile
server/config/: application.rb  cable.yml  routes.rb
server/db/: schema.rb
(+37 files in other folders)
